[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "mobilitydb-sqlalchemy"
version = "0.4"
description = "MobilityDB extensions to SQLAlchemy"
readme = "README.rst"
license = "MIT"
authors = ["B Krishna Chaitanya <bkchaitan94@gmail.com>"]
packages = [
    { include = "mobilitydb_sqlalchemy" },
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords=["geo", "gis", "postgres", "mobilitydb", "sqlalchemy", "orm"]
homepage = "https://github.com/adonmo/mobilitydb-sqlalchemy"
repository = "https://github.com/adonmo/mobilitydb-sqlalchemy"
documentation = "https://mobilitydb-sqlalchemy.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.7"
pandas = "^1.1.0"
sqlalchemy = "^1.3.18"
geoalchemy2 = "^0.8.4"
shapely = "^1.7.0"
movingpandas = {version = "^0.4rc1", optional = true}
sphinx = {version = "^2.3.1", optional = true}
sphinx-rtd-theme = {version = "^0.4.3", optional = true}
tomlkit = {version = "^0.5.8", optional = true}
pymeos = "^0.1.1"

[tool.poetry.dev-dependencies]
dephell = "^0.8.3"
fissix = "^20.5.1"
pytest = "^6.0.1"
psycopg2 = "^2.8.5"
pre-commit = "^2.6.0"
black = "^19.10b0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "tomlkit"]

# Currently installing the optional dependency of movingpandas
# using `poetry install -E movingpandas` doesn't work
# Check README.md for instructions on how to install it
movingpandas = ["movingpandas"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
